# book-ui/src/app/services/book/models/for-sort.ts
@@ -1,14 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface ForSort {
-  eviction?: string;
-  location?: string;
-  maxWorthPerNight?: number;
-  minWorthPerNight?: number;
-  numberOfBed?: number;
-  rate?: 'LUX' | 'FAMILY' | 'ECONOMIC' | 'PRESIDENT';
-  settlement?: string;
-  stars?: 'ONE' | 'TWO' | 'THREE' | 'FOUR' | 'FIVE';
-}
